refactor: git providers
