# pkg/server/api/docs/swagger.yaml
@@ -20,6 +20,29 @@ definitions:
       protocol:
         type: string
     type: object
+  GetRepoArtifactsRequest:
+    properties:
+      gitProviderId:
+        type: string
+      namespaceId:
+        type: string
+      repository:
+        $ref: '#/definitions/Repository'
+    type: object
+  GitBranch:
+    properties:
+      name:
+        type: string
+      sha:
+        type: string
+    type: object
+  GitNamespace:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   GitProvider:
     properties:
       baseApiUrl:
@@ -31,11 +54,22 @@ definitions:
       username:
         type: string
     type: object
-  GitUserData:
+  GitPullRequest:
+    properties:
+      branch:
+        type: string
+      name:
+        type: string
+    type: object
+  GitUser:
     properties:
       email:
         type: string
+      id:
+        type: string
       name:
+        type: string
+      username:
         type: string
     type: object
   InstallProviderRequest:
@@ -242,10 +276,130 @@ info:
   title: Daytona Server API
   version: 0.1.0
 paths:
-  /gitprovider/{gitProviderId}/user-data:
+  /gitprovider:
+    get:
+      description: List git providers
+      operationId: ListGitProviders
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/GitProvider'
+            type: array
+      summary: List git providers
+      tags:
+      - gitProvider
+    post:
+      description: Set Git provider
+      operationId: SetGitProvider
+      parameters:
+      - description: Git provider
+        in: body
+        name: gitProviderData
+        required: true
+        schema:
+          $ref: '#/definitions/GitProvider'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Set Git provider
+      tags:
+      - gitProvider
+  /gitprovider/{gitProviderId}:
+    delete:
+      description: Remove Git provider
+      operationId: RemoveGitProvider
+      parameters:
+      - description: Git provider
+        in: path
+        name: gitProviderId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Remove Git provider
+      tags:
+      - gitProvider
+    get:
+      description: Get Git provider
+      operationId: GetGitProvider
+      parameters:
+      - description: Git provider
+        in: path
+        name: gitProviderId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GitProvider'
+      summary: Get Git provider
+      tags:
+      - gitProvider
+  /gitprovider/{gitProviderId}/{namespaceId}/repositories:
+    get:
+      description: Get Git repositories
+      operationId: GetRepositories
+      parameters:
+      - description: Git provider
+        in: path
+        name: gitProviderId
+        required: true
+        type: string
+      - description: Namespace
+        in: path
+        name: namespaceId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/Repository'
+            type: array
+      summary: Get Git repositories
+      tags:
+      - gitProvider
+  /gitprovider/{gitProviderId}/namespaces:
+    get:
+      description: Get Git namespaces
+      operationId: GetNamespaces
+      parameters:
+      - description: Git provider
+        in: path
+        name: gitProviderId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/GitNamespace'
+            type: array
+      summary: Get Git namespaces
+      tags:
+      - gitProvider
+  /gitprovider/{gitProviderId}/user:
     get:
       description: Get Git context
-      operationId: GetGitUserData
+      operationId: GetGitUser
       parameters:
       - description: Git Provider Id
         in: path
@@ -258,8 +412,95 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GitUserData'
+            $ref: '#/definitions/GitUser'
       summary: Get Git context
+      tags:
+      - gitProvider
+  /gitprovider/context/{gitUrl}:
+    get:
+      description: Get Git context
+      operationId: GetGitContext
+      parameters:
+      - description: Git URL
+        in: path
+        name: gitUrl
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Repository'
+      summary: Get Git context
+      tags:
+      - gitProvider
+  /gitprovider/repositories/branches:
+    get:
+      description: Get Git repository branches
+      operationId: GetRepoBranches
+      parameters:
+      - description: Repository artifacts request
+        in: body
+        name: artifacts
+        required: true
+        schema:
+          $ref: '#/definitions/GetRepoArtifactsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/GitBranch'
+            type: array
+      summary: Get Git repository branches
+      tags:
+      - gitProvider
+  /gitprovider/repositories/pull-requests:
+    get:
+      description: Get Git repository PRs
+      operationId: GetRepoPRs
+      parameters:
+      - description: Repository artifacts request
+        in: body
+        name: artifacts
+        required: true
+        schema:
+          $ref: '#/definitions/GetRepoArtifactsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/GitPullRequest'
+            type: array
+      summary: Get Git repository PRs
+      tags:
+      - gitProvider
+  /gitprovider/username-from-token:
+    get:
+      description: Get username from token
+      operationId: GetGitUsernameFromToken
+      parameters:
+      - description: Git provider
+        in: body
+        name: gitProviderData
+        required: true
+        schema:
+          $ref: '#/definitions/GitProvider'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Get username from token
       tags:
       - gitProvider
   /provider:
@@ -367,26 +608,6 @@ paths:
           schema:
             $ref: '#/definitions/ServerConfig'
       summary: Set the server configuration
-      tags:
-      - server
-  /server/get-git-context/{gitUrl}:
-    get:
-      description: Get Git context
-      operationId: GetGitContext
-      parameters:
-      - description: Git URL
-        in: path
-        name: gitUrl
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/Repository'
-      summary: Get Git context
       tags:
       - server
   /server/network-key:
