# pkg/views/gitprovider/select.go
@@ -15,26 +15,27 @@ import (
 	view_util "github.com/daytonaio/daytona/pkg/views/util"
 )
 
-type GitProviderSelectView struct {
+type GitProviderView struct {
 	Id         string
+	Name       string
 	Username   string
 	BaseApiUrl string
 	Token      string
 }
 
-func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGitProviders []serverapiclient.GitProvider, isDeleting bool) {
-	availableGitProviders := config.GetGitProviderList()
+func GitProviderSelectionView(gitProviderAddView *serverapiclient.GitProvider, userGitProviders []serverapiclient.GitProvider, isDeleting bool) {
+	supportedProviders := config.GetSupportedGitProviders()
 
 	var gitProviderOptions []huh.Option[string]
-	for _, availableProvider := range availableGitProviders {
+	for _, supportedProvider := range supportedProviders {
 		if isDeleting {
 			for _, userProvider := range userGitProviders {
-				if *userProvider.Id == availableProvider.Id {
-					gitProviderOptions = append(gitProviderOptions, huh.Option[string]{Key: availableProvider.Name, Value: availableProvider.Id})
+				if *userProvider.Id == supportedProvider.Id {
+					gitProviderOptions = append(gitProviderOptions, huh.Option[string]{Key: supportedProvider.Name, Value: supportedProvider.Id})
 				}
 			}
 		} else {
-			gitProviderOptions = append(gitProviderOptions, huh.Option[string]{Key: availableProvider.Name, Value: availableProvider.Id})
+			gitProviderOptions = append(gitProviderOptions, huh.Option[string]{Key: supportedProvider.Name, Value: supportedProvider.Id})
 		}
 	}
 
@@ -45,7 +46,7 @@ func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGit
 				Options(
 					gitProviderOptions...,
 				).
-				Value(&gitProviderAddView.Id)),
+				Value(gitProviderAddView.Id)),
 	).WithTheme(views.GetCustomTheme())
 
 	err := gitProviderForm.Run()
@@ -57,7 +58,7 @@ func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGit
 		huh.NewGroup(
 			huh.NewInput().
 				Title("Username").
-				Value(&gitProviderAddView.Username).
+				Value(gitProviderAddView.Username).
 				Validate(func(str string) error {
 					if str == "" {
 						return errors.New("username can not be blank")
@@ -65,12 +66,12 @@ func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGit
 					return nil
 				}),
 		).WithHideFunc(func() bool {
-			return isDeleting || gitProviderAddView.Id != "bitbucket"
+			return isDeleting || *gitProviderAddView.Id != "bitbucket"
 		}),
 		huh.NewGroup(
 			huh.NewInput().
 				Title("Self-managed API URL").
-				Value(&gitProviderAddView.BaseApiUrl).
+				Value(gitProviderAddView.BaseApiUrl).
 				Description("For example: http://gitlab-host/api/v4/ or https://gitea-host").
 				Validate(func(str string) error {
 					if str == "" {
@@ -79,12 +80,12 @@ func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGit
 					return nil
 				}),
 		).WithHideFunc(func() bool {
-			return isDeleting || (gitProviderAddView.Id != "gitlab-self-managed" && gitProviderAddView.Id != "gitea")
+			return isDeleting || (*gitProviderAddView.Id != "gitlab-self-managed" && *gitProviderAddView.Id != "gitea")
 		}),
 		huh.NewGroup(
 			huh.NewInput().
 				Title("Personal access token").
-				Value(&gitProviderAddView.Token).
+				Value(gitProviderAddView.Token).
 				Password(true).
 				Validate(func(str string) error {
 					if str == "" {
@@ -95,7 +96,7 @@ func GitProviderSelectionView(gitProviderAddView *GitProviderSelectView, userGit
 		).WithHide(isDeleting),
 	).WithTheme(views.GetCustomTheme())
 
-	view_util.RenderInfoMessage(fmt.Sprintf("More information on:\n%s", config.GetDocsLinkFromGitProvider(gitProviderAddView.Id)))
+	view_util.RenderInfoMessage(fmt.Sprintf("More information on:\n%s", config.GetDocsLinkFromGitProvider(*gitProviderAddView.Id)))
 
 	err = userDataForm.Run()
 	if err != nil {
